<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/principal"
            android:title="@string/menu_item_1"
            android:icon="@drawable/ic_launcher"
            android:checkable="false">
        </item>
        <item
            android:id="@+id/cotizaciones"
            android:title="@string/menu_item_2"
            android:icon="@drawable/ic_launcher"
            android:checkable="false">
        </item>
        <item
            android:id="@+id/reportes"
            android:title="@string/menu_item_3"
            android:icon="@drawable/ic_launcher"
            android:checkable="false">
        </item>
        <item
            android:id="@+id/cuenta"
            android:title="@string/menu_item_4"
            android:icon="@drawable/ic_launcher"
            android:checkable="false">
        </item>
        <item
            android:id="@+id/pendientes"
            android:title="@string/menu_item_5"
            android:icon="@drawable/ic_launcher"
            android:checkable="false"
            >
        </item>
    </group>
</menu>