<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/view1"
    tools:context=".Activities.Register">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:text="@string/register_title"
        android:textStyle="bold"
        android:textSize="@dimen/text_big"
        android:gravity="center"
        android:layout_marginBottom="20dp"/>
    <Button
        android:id="@+id/account_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/botton"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="@dimen/text_medium"
        android:text="@string/register_button_account"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_or"
        android:textStyle="bold"
        android:textSize="@dimen/text_big"
        android:textColor="@color/colorPrimary"
        android:gravity="center"
        android:layout_marginBottom="10dp"/>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />




</LinearLayout>